8348033: Tidy Nashorn code (#23)